[package]
name        = "athena"
description = "A tool for computing the dependency graph for a TS/JS project"
version     = "0.0.1"
authors     = ["Brad Zacher <brad.zacher@gmail.com>"]
edition     = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
clean-path = "0.2.1"
ignore = "0.4.20"
json_comments = "0.2.1"
parking_lot = "0.12.1"
petgraph = "0.6.3"
rayon = "1.7.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
spliter = "0.1.0"
swc_atoms = "0.5.6"
swc_common = { version = "0.31.10", features = ["tty-emitter"] }
swc_ecma_ast = "0.104.4"
swc_ecma_parser = "0.134.9"
swc_ecma_visit = "0.90.4"
